Cros: Maxmize/Minimize/Fullscreen a window dismiss the window resizer.

Bug: 798633
Change-Id: Idaa380f6594bfa2ea98b46eca357f6a78941e8a9
Reviewed-on: https://chromium-review.googlesource.com/955953
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542235}
Former-commit-id: d1ba6a8b0057b769e85d4314169e938541f9354f